CMake: Fix MinGW builds with BUILD_WITH_PCH=OFF

Set the minimum required Windows version not only for PCH builds, but
also for builds without precompiled headers. While there also increase
the minimum required Windows version: Qt 6 already requires Windows 10.
Therefore its safe to require the same API level for Qt Creator.

Fixes: QTCREATORBUG-30189
Change-Id: Icbbc63657e3c64be1151dda06004234d56e33990
Reviewed-by: Cristian Adam <cristian.adam@qt.io>