src/shared/qtcreator_pch.h
@@ -18,11 +18,11 @@
 #undef WIN32_LEAN_AND_MEAN
 #define WIN32_LEAN_AND_MEAN
 
-// lib/Utils needs defines for Windows 8
+// Minimum requirement for Qt 6, and therefore Creator is Windows 10
 #undef WINVER
-#define WINVER 0x0602
+#define WINVER 0x0A00
 #undef _WIN32_WINNT
-#define _WIN32_WINNT 0x0602
+#define _WIN32_WINNT 0x0A00
 
 #define NOHELP
 #include <qt_windows.h>
